# brainmine-ai-crm-ui

./: hooks.py  modules.txt  pyproject.toml  requirements.txt  setup.py
public/js/: brainmine_ai_crm_ui.bundle.js
